Creación Style.css y estructura ppal de HTML

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Talento Tech</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Proyecto Taltento Tech</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Sobre Nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Servicios</h2>
+        </section>
+        <section>
+            <h2>Sobre Nosotros</h2>
+        </section>
+        <section>
+            <h2>Contacto</h2>
+        </section>
+    </main>
 </body>
 </html>
