--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
             </ul>
         </nav>
     </header>
+
     <main>
-        <section>
+        <section class="secciones">
             <h2>Servicios</h2>
         </section>
-        <section>
+        <section class="secciones">
             <h2>Sobre Nosotros</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, dolorem, atque optio quo aperiam blanditiis architecto neque possimus voluptatem dolore eligendi provident, minima iste inventore omnis ducimus ullam porro rem.
+                Ratione laborum nobis, blanditiis commodi in, accusantium quos doloribus sapiente cumque at praesentium veritatis, sunt recusandae? Veniam provident alias fugiat, excepturi iure labore eius nihil consequatur iste libero suscipit dolore.
+                Tenetur deleniti nobis, ipsam neque aut ullam culpa distinctio sunt, exercitationem eos soluta! Incidunt ipsam distinctio ut cumque reiciendis itaque voluptas assumenda, sint mollitia dolores quis perferendis voluptatem doloremque eveniet?
+            </p>
         </section>
-        <section>
+        <section class="secciones">
             <h2>Contacto</h2>
             <form action="#">
                 <label for="nombre">Nombre:</label>
@@ -44,5 +50,9 @@
             </form>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; 2024 Fernando Noé. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
