Modificacion estructura HTML

--- a/index.html
+++ b/index.html
@@ -11,27 +11,51 @@
         <h1>Proyecto Taltento Tech</h1>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Sobre Nosotros</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#sobremi">Sobre Mí</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="secciones">
-            <h2>Servicios</h2>
+        <section id="sobremi">
+            <h2>Sobre Mí</h2>
+            <img src="#" alt="Imágen de Perfil">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, blanditiis! Quam tempore libero aliquid neque fugiat molestiae. Assumenda soluta expedita quibusdam voluptas! Voluptas assumenda atque tempore rerum ad! Placeat, ad?</p><br/>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolorem ducimus magnam, nobis aliquam deserunt dolorum fugiat? Temporibus eligendi, eaque laborum debitis, repudiandae cupiditate, ex ipsum expedita eum dolor modi.</p>
+            <div>
+                <h3>Skills</h3>
+                <img src="#" alt="Skills">
+
+                <h3>Educación</h3>
+                <img src="#" alt="certificados">
+            </div>
         </section>
-        <section class="secciones">
-            <h2>Sobre Nosotros</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, dolorem, atque optio quo aperiam blanditiis architecto neque possimus voluptatem dolore eligendi provident, minima iste inventore omnis ducimus ullam porro rem.
-                Ratione laborum nobis, blanditiis commodi in, accusantium quos doloribus sapiente cumque at praesentium veritatis, sunt recusandae? Veniam provident alias fugiat, excepturi iure labore eius nihil consequatur iste libero suscipit dolore.
-                Tenetur deleniti nobis, ipsam neque aut ullam culpa distinctio sunt, exercitationem eos soluta! Incidunt ipsam distinctio ut cumque reiciendis itaque voluptas assumenda, sint mollitia dolores quis perferendis voluptatem doloremque eveniet?
-            </p>
+
+        <section id="proyectos">
+            <h2>Proyectos</h2>
+            <div class="cards">
+                <h3>Project 1</h3>
+                <img src="#" alt="Project1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
+                <a href="#">Ver Más</a>
+            </div><br/>
+            <div class="cards">
+                <h3>Project 2</h3>
+                <img src="#" alt="Project2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
+                <a href="#">Ver Más</a>
+            </div><br/>
+            <div class="cards">
+                <h3>Project 3</h3>
+                <img src="#" alt="Project3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
+                <a href="#">Ver Más</a>
+            </div><br/>
         </section>
-        <section class="secciones">
+        <section id="contacto">
             <h2>Contacto</h2>
             <form action="#">
                 <label for="nombre">Nombre:</label>
