Estilos agregados al  Nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Proyecto Taltento Tech</h1>
+        <h1>Proyecto Talento Tech</h1>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
@@ -36,24 +36,27 @@
 
         <section id="proyectos">
             <h2>Proyectos</h2>
-            <div class="cards">
-                <h3>Project 1</h3>
-                <img src="#" alt="Project1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
-                <a href="#">Ver Más</a>
-            </div><br/>
-            <div class="cards">
-                <h3>Project 2</h3>
-                <img src="#" alt="Project2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
-                <a href="#">Ver Más</a>
-            </div><br/>
-            <div class="cards">
-                <h3>Project 3</h3>
-                <img src="#" alt="Project3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
-                <a href="#">Ver Más</a>
-            </div><br/>
+            <div class="card-container">
+                <div class="cards">
+                    <img src="#" alt="Img-Project1">
+                    <h3>Project 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
+                    <a href="#">Ver Más</a>
+                </div><br/>
+                <div class="cards">
+                    <img src="#" alt="Img-Project2">
+                    <h3>Project 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
+                    <a href="#">Ver Más</a>
+                </div><br/>
+                <div class="cards">
+                    <img src="#" alt="Img-Project3">
+                    <h3>Project 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
+                    <a href="#">Ver Más</a>
+                </div><br/>
+                    <a href="#">Load More</a>
+            </div>
         </section>
         <section id="contacto">
             <h2>Contacto</h2>
