--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
             <h2>Proyectos</h2>
             <div class="card-container">
                 <div class="cards">
-                    <img src="#" alt="Img-Project1">
+                    <img src="./resources/image.jpg" alt="Img-Project1">
                     <h3>Project 1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
                     <a href="#">Ver Más</a>
                 </div><br/>
                 <div class="cards">
-                    <img src="#" alt="Img-Project2">
+                    <img src="./resources/image.jpg" walt="Img-Project2">
                     <h3>Project 2</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
                     <a href="#">Ver Más</a>
                 </div><br/>
                 <div class="cards">
-                    <img src="#" alt="Img-Project3">
+                    <img src="./resources/image.jpg" alt="Img-Project3">
                     <h3>Project 3</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum modi eveniet nesciunt hic at neque officiis quas blanditiis, reprehenderit ad eius corporis, iste dolor, perspiciatis totam error aspernatur aut culpa!</p>
                     <a href="#">Ver Más</a>
                 </div><br/>
-                    <a href="#">Load More</a>
             </div>
+            <a class="button" href="#">Load More</a>
         </section>
         <section id="contacto">
             <h2>Contacto</h2>
