2da Actualización CSS

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <main>
         <section id="sobremi">
             <h2>Sobre Mí</h2>
-            <img src="#" alt="Imágen de Perfil">
+            <img src="./resources/image.jpg" alt="Imágen de Perfil">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, blanditiis! Quam tempore libero aliquid neque fugiat molestiae. Assumenda soluta expedita quibusdam voluptas! Voluptas assumenda atque tempore rerum ad! Placeat, ad?</p><br/>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolorem ducimus magnam, nobis aliquam deserunt dolorum fugiat? Temporibus eligendi, eaque laborum debitis, repudiandae cupiditate, ex ipsum expedita eum dolor modi.</p>
-            <div>
+            <div >
                 <h3>Skills</h3>
                 <img src="#" alt="Skills">
 
