3ra Actualización CSS

--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
             <img src="./resources/image.jpg" alt="Imágen de Perfil">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, blanditiis! Quam tempore libero aliquid neque fugiat molestiae. Assumenda soluta expedita quibusdam voluptas! Voluptas assumenda atque tempore rerum ad! Placeat, ad?</p><br/>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolorem ducimus magnam, nobis aliquam deserunt dolorum fugiat? Temporibus eligendi, eaque laborum debitis, repudiandae cupiditate, ex ipsum expedita eum dolor modi.</p>
-            <div >
-                <h3>Skills</h3>
-                <img src="#" alt="Skills">
-
-                <h3>Educación</h3>
-                <img src="#" alt="certificados">
+            <div class="contenedor-sobremi">
+                <div>
+                    <h3>Skills</h3>
+                    <img src="#" alt="Skills">
+                </div>
+                <div >
+                    <h3>Educación</h3>
+                    <img src="./resources/image.jpg" alt="certificados">
+                    <img src="./resources/image.jpg" alt="certificados">
+                    <img src="./resources/image.jpg" alt="certificados">
+                </div>
             </div>
         </section>
 
