Cambios de maqueta y estilos

--- a/index.html
+++ b/index.html
@@ -21,20 +21,26 @@
 
     <main>
         <section id="sobremi">
-            <h2>Sobre Mí</h2>
-            <img src="./resources/image.jpg" alt="Imágen de Perfil">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, blanditiis! Quam tempore libero aliquid neque fugiat molestiae. Assumenda soluta expedita quibusdam voluptas! Voluptas assumenda atque tempore rerum ad! Placeat, ad?</p><br/>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolorem ducimus magnam, nobis aliquam deserunt dolorum fugiat? Temporibus eligendi, eaque laborum debitis, repudiandae cupiditate, ex ipsum expedita eum dolor modi.</p>
+            <div>
+                <h2>Sobre Mí</h2>
+                <img src="./resources/image.jpg" alt="Imágen de Perfil">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, blanditiis! Quam tempore libero aliquid neque fugiat molestiae. Assumenda soluta expedita quibusdam voluptas! Voluptas assumenda atque tempore rerum ad! Placeat, ad?</p><br/>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolorem ducimus magnam, nobis aliquam deserunt dolorum fugiat? Temporibus eligendi, eaque laborum debitis, repudiandae cupiditate, ex ipsum expedita eum dolor modi.</p>
+            </div>
             <div class="contenedor-sobremi">
+                
                 <div>
-                    <h3>Skills</h3>
-                    <img src="#" alt="Skills">
-                </div>
-                <div >
                     <h3>Educación</h3>
                     <img src="./resources/image.jpg" alt="certificados">
                     <img src="./resources/image.jpg" alt="certificados">
                     <img src="./resources/image.jpg" alt="certificados">
+                </div>
+
+                <div>
+                    <h3>Skills</h3>
+                    <img src="./resources/image.jpg" alt="Skills">
+                    <img src="./resources/image.jpg" alt="Skills">
+                    <img src="./resources/image.jpg" alt="Skills">
                 </div>
             </div>
         </section>
@@ -85,6 +91,9 @@
 
     <footer>
         <p>&copy; 2024 Fernando Noé. Todos los derechos reservados.</p>
+        <div>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
     </footer>
 </body>
 </html>
