--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
             <h1 id="sobremi">Sobre mí</h1>
             <div class="sobre-mi-content">
                 <div class="image">
-                    <img src="./Recursos/Img-Perfil.jpg" class="mi-imagen" alt="Img-1">
+                    <img src="./img.jpg" class="mi-imagen" alt="Img-1">
                 </div>
                 <p>
-                Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. </br>
-                Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. </br>  
-                Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. </br> 
-                Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. </br>    
-                Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. 
+                    Hola! soy Fernando Noé.<br>
+                    Un entusiasta del mundo de la tecnología con una pasión por el
+                    desarrollo y los sistemas informáticos. <br>
+                    Me presento como una persona activa, dinámica y eficiente, con
+                    facilidad de adaptación, predispuesto a trabajar en equipo.<br>
+                    Considero ser metódico, organizado y responsable.<br>
+                    Con iniciativa para resolver problemas y dispuesto a asumir nuevos
+                    retos que me permitan seguir creciendo profesionalmente.
+                
                 </p>
             </div>
         </section>
@@ -96,15 +100,16 @@
                 <div class="card">
                     <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img src="./img.jpg" width="70%"  alt="Img-1"></a>
                     <h3>Proyecto-1</h3>
-                    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
-                    <!-- <p>Landing site Link-in-bio created for BomberosRA</p> -->
+                    <!-- <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p> -->
+                    <p>Landing site Link-in-bio created for BomberosRA</p>
                     <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank" class="botones">Load More</a>
                 </div>
                 <div class="card">
                     <a href="#" target="_blank"><img src="./img.jpg" width="70%" alt="Img-1"></a>
                     <h3>Proyecto-2</h3>
-                    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
-                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank" class="botones">Load More</a>
+                    <!-- <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p> -->
+                    <p>App del Clima</p>
+                    <a href="./App-Clima/index.html" target="_blank" class="botones">Load More</a>
                 </div>
                 <div class="card">
                     <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img src="./img.jpg" width="70%"  alt="Img-1"></a>
