--- a/index.html
+++ b/index.html
@@ -98,24 +98,23 @@
             <h2 id="proyectos">Proyectos</h2>
             <div class="proyectos-content">
                 <div class="card">
-                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img src="./img.jpg" width="70%"  alt="Img-1"></a>
+                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img class="Img-proyectos" src="./Img-Cnbvra.PNG" width="70%"  alt="Img-1"></a>
                     <h3>Proyecto-1</h3>
                     <!-- <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p> -->
-                    <p>Landing site Link-in-bio created for BomberosRA</p>
-                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank" class="botones">Load More</a>
+                    <p>Landing Pagen estilo "Link-in-bio" creada para @BomberosRA</p>
+                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank" class="botones">Ver más</a>
                 </div>
                 <div class="card">
-                    <a href="#" target="_blank"><img src="./img.jpg" width="70%" alt="Img-1"></a>
+                    <a href="./App-Clima/index.html" target="_blank"><img class="Img-proyectos" src="./Img-App-Clima.PNG" width="70%" alt="Img-1"></a>
                     <h3>Proyecto-2</h3>
-                    <!-- <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p> -->
-                    <p>App del Clima</p>
-                    <a href="./App-Clima/index.html" target="_blank" class="botones">Load More</a>
+                    <p>App de Clima</p>
+                    <a href="./App-Clima/index.html" target="_blank" class="botones">Ver más</a>
                 </div>
                 <div class="card">
-                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img src="./img.jpg" width="70%"  alt="Img-1"></a>
+                    <a href="#" target="_blank"><img class="Img-proyectos" src="./img.jpg" width="70%"  alt="Img-1"></a>
                     <h3>Proyecto-3</h3>
-                    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
-                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank" class="botones">Load More</a>
+                    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</p>
+                    <a href="#" target="_blank" class="botones">Ver más</a>
                 </div>
             </div>
         </section>
