--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 id="sobremi">Sobre mí</h1>
             <div class="sobre-mi-content">
                 <div class="image">
-                    <img src="./img.jpg" class="mi-imagen" alt="Img-1">
+                    <img src="./Img-Perfil-2.jpg" class="mi-imagen" alt="Imágen de Perfil">
                 </div>
                 <p>
                     Hola! soy Fernando Noé.<br>
@@ -101,13 +101,13 @@
                     <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img class="Img-proyectos" src="./Img-Cnbvra.PNG" width="70%"  alt="Img-1"></a>
                     <h3>Proyecto-1</h3>
                     <!-- <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p> -->
-                    <p>Landing Pagen estilo "Link-in-bio" creada para @BomberosRA</p>
+                    <p>Landing Pagen creada para @BomberosRA</p>
                     <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank" class="botones">Ver más</a>
                 </div>
                 <div class="card">
                     <a href="./App-Clima/index.html" target="_blank"><img class="Img-proyectos" src="./Img-App-Clima.PNG" width="70%" alt="Img-1"></a>
                     <h3>Proyecto-2</h3>
-                    <p>App de Clima</p>
+                    <p>App para solicitar el Clima basada en API OpenWeatherMap</p>
                     <a href="./App-Clima/index.html" target="_blank" class="botones">Ver más</a>
                 </div>
                 <div class="card">
