--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2 id="proyectos">Proyectos</h2>
             <div class="proyectos-content">
                 <div class="card">
-                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img class="Img-proyectos" src="./Img-Cnbvra.PNG" width="70%"  alt="Img-1"></a>
+                    <a href="https://www.bomberosra.org.ar/link-in-bio" target="_blank"><img class="Img-proyectos" src="./Img-cnbvra.PNG" width="70%"  alt="Img-1"></a>
                     <h3>Proyecto-1</h3>
                     <!-- <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p> -->
                     <p>Landing Pagen creada para @BomberosRA</p>
